// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpLink custom props 1`] = `
<a
  className="test-class-name"
  href="https://www.labkey.org/Documentation/wiki-page.view?name=TEST_TOPIC&referrer=TEST_REFERRER"
  rel="noreferrer"
  target="_blank"
>
  custom props
</a>
`;

exports[`HelpLink default props 1`] = `
<a
  href="https://www.labkey.org/Documentation/wiki-page.view?name=TEST_TOPIC&referrer=inPage"
  rel="noreferrer"
  target="_blank"
>
  default props text
</a>
`;
